--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 	
 	Nintendo Entertainment System (NES) loader module
 	------------------------------------------------------
-	Copyright 2006, Dennis Elser (dennis@backtrace.de)
+	Copyright 2006, Dennis Elser
 
 
 	IDA Pro loader module for Nintendo Enternainment System
